--- a/src/Components/RegisterPage/form.css
+++ b/src/Components/RegisterPage/form.css
@@ -1,30 +1,79 @@
+
+.MainPage {
+    
+}
+
 form{
+    border: 2px solid rgb(244, 242, 242);
+    max-width: 400px;
+    padding: 20px 0;
+    background: rgb(255, 255, 255);
+    margin-top: 5%;
+    margin-left: 37%;
+    -webkit-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.5);
+    -moz-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.5);
+    box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.3);
+    
+    
    
+}
+h1{
+    font-size: 1.4rem;
+    padding: 20px 0;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: #fff;
+    
+    
+}
+.header{
+    background: rgb(206, 133, 7);
+    width: 100%;
 }
 
 
 
-/* .form-group{
+.form-group{
     width: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    
     
     
 
-} */
+}
 
 
 .input{
-    padding: 20px 20px;
+    padding: 5px 20px;
+    
 
 }
 input{
     width:200px;
     height: 50px;
+    margin: 20px 0;
 }
 label{
     
-    padding: 0 40px;
+    padding: 0 50px;
+    font-size: 1.5rem;
+    
 
+
+}
+
+.reg-btn{
+    padding: 20px 40px;
+    background: rgb(206, 133, 7);
+    border: none;
+    border-radius: 50px;
+    color:#fff;
+    font-size: 1.3rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.reg-btn:hover {
+    background: #000;
+    color: rgb(206, 133, 7);
 }
