--- a/src/Components/Todo/Todo.css
+++ b/src/Components/Todo/Todo.css
@@ -1,41 +1,41 @@
-.listItem{
-    background: rgb(255, 255, 255);
-    margin-top: 5%;
-    /* -webkit-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2);
+.listItem {
+  background: rgb(255, 255, 255);
+  margin-top: 5%;
+  /* -webkit-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2);
     -moz-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2);
     box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2); */
-    color: rgb(206, 133, 7);
-    font-size: 1.8rem;
-    
+  color: rgb(206, 133, 7);
+  font-size: 1.8rem;
 }
 
-
-.newItem:hover{
-    background: rgb(206, 133, 7);
-    color: #fff;
+.newItem:hover {
+  background: rgb(206, 133, 7);
+  color: #fff;
 }
 
-.newItem{
-    border: 2px solid rgb(240, 240, 240);
-    padding: 20px 0;
-    margin: 30px 0;
+.newItem {
+  border: 2px solid rgb(240, 240, 240);
+  padding: 20px 0;
+  margin: 30px 0;
 }
 
-
-.btn2{
-    /* width: 40px;
+.btn2 {
+  /* width: 40px;
     height: 40px; */
-    font-size: 2rem;
-    padding: 8px 18px;
-    margin: 0 10px;
-    
+  font-size: 2rem;
+  padding: 8px 18px;
+  margin: 0 10px;
 }
 
+.todo-bg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-
-
-.todo-bg{
-    display: flex;
-    align-items: center;
-    
+.newform {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
