--- a/src/Components/Todo/Todo.css
+++ b/src/Components/Todo/Todo.css
@@ -1,9 +1,6 @@
 .listItem{
     background: rgb(255, 255, 255);
     margin-top: 5%;
-    /* -webkit-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2);
-    -moz-box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2);
-    box-shadow: 10px 10px 39px -21px rgba(0,0,0,0.2); */
     color: rgb(206, 133, 7);
     font-size: 1.8rem;
     
@@ -35,7 +32,20 @@
 
 
 .todo-bg{
+    width: 100%;
     display: flex;
     align-items: center;
     
+}
+
+
+.box1{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50px;
+
+}
+
+.newform {
+    width: 100%;
 }
