--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -1,4 +1,4 @@
-.nav{
+/* .nav{
     display: flex;
     justify-content: space-between;
     padding: 15px 35px;
@@ -27,4 +27,4 @@ h2{
 .logout:hover{
     color: #000;
     border: 1px solid #000;
-}
+} */
